--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
+    "ajv-formats": "^3.0.1",
     "fhirpath": "^3.11.0"
   }
 }
